<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TextView   android:id="@+id/widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sitelabel" />

    <EditText   android:id="@+id/widget3"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp" />

    <TextView   android:id="@+id/widget4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/ref" />

    <EditText   android:id="@+id/widget5"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp" />

    <TextView   android:id="@+id/widget6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/un" />

    <EditText   android:id="@+id/widget7"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp" />

    <TextView   android:id="@+id/widget8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/pw" />

    <EditText   android:id="@+id/widget9"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp" />

    <TextView   android:id="@+id/widget10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/desc" />

    <EditText   android:id="@+id/widget11"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp" />

    <TableRow   android:id="@+id/widget12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

        <ListView   android:id="@+id/widget13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:entries="@array/site_types_array"/>

        <Button     android:id="@+id/widget14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/gen" />

        <Button     android:id="@+id/widget15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/enter" />
    </TableRow>
</TableLayout>